Rewrited loadCollage using advices.
Added using critical section.

Implemented loadCollage(List<String> urls, ImageTarget imageTarget, CollageStrategy collageStrategy)